Stage 1: close the security holes (SEC-1..SEC-5, ARC-2, ARC-6)
SEC-1  JWTUtils read its HMAC key from a string literal in the constructor,
       so anyone able to read the source could mint a token for any user.
       The key now comes from jwt.secret (JWT_SECRET) with no fallback, and
       startup fails if it is missing or shorter than 32 bytes. Token
       lifetime moves to jwt.expiration-ms. The previous key must be treated
       as compromised; rotating it invalidates all existing tokens.

SEC-2  Only /admin/** was role-gated and every business API lives under
       /user/**, so any authenticated principal - including DRIVER - could
       read customer balances, delete master data and pull reports. Rules
       are now explicit per area: drivers reach /user/sales/** and the
       master data those entries reference, office staff reach purchases,
       payments, ledger and reports, and trading plus party master data are
       admin-only. @EnableMethodSecurity is on so service-level checks can
       be added without relying on URL patterns alone.

SEC-3  src/main/resources/.env carried database credentials and was compiled
       into target/classes, shipping them inside the JAR. Removed, along
       with the stale copies under bin/ and target/. The root .env remains
       the single source and is gitignored.

SEC-4  CorsConfig allowed every origin while SecurityConfig's own CORS bean
       was unused, because .cors() was commented out of the chain. CorsConfig
       is deleted, the bean is wired in, and origins come from frontend.url,
       which is now also defined for the dev profile - it was missing, so
       @Value("${frontend.url}") would have failed startup under dev.

SEC-5  JWTAuthFilter parsed tokens with no try/catch, turning ordinary
       session expiry into a 500 and preventing the frontend from handling
       401. Parse failures now return 401. Per-request authentication logging
       drops to debug, and the misleading "token is 